refac:find recent teacher application